--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,13 @@ authors = [{ name = "Endre Bjørsvik", email = "endrebjorsvik@gmail.com" }]
 description = "Utility for reading HAN data from Kaifa electriciy meters."
 readme = "README.md"
 
-dependencies = ["construct>=2.9", "pyserial", "Click", "psycopg2-binary"]
+dependencies = [
+    "construct>=2.9",
+    "construct-typing",
+    "pyserial",
+    "Click",
+    "psycopg2-binary",
+]
 requires-python = ">=3.6"
 license = "GPL-3.0-only"
 license-files = ["LICENCSE"]
