Upgrade psycopg from v2 to v3 and clean up remaining type errors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "construct-typing",
     "pyserial",
     "Click",
-    "psycopg2-binary",
+    "psycopg[binary]",
 ]
 requires-python = ">=3.6"
 license = "GPL-3.0-only"
